SBVTestSuite/TestSuite/CompileTests/SCase/SCase09.stderr
SCase09.hs:11:14: error: [GHC-39584]
    " SCase09.hs:14:16-21: sCase/pCase: Not in scope: data constructor: Viar
    " In the quasi-quotation:
        [sCase|Expr e of
               Zero          -> 0
               Num i         -> i
               Viar s         -> ite (s .== "a") 1 2
               Add a b       -> t e + t b
               Let _   _a  b -> t b
      |]
   |
11 | t e = [sCase|Expr e of
   |              ^^^^^^^^^...

